samples/_failures_safe/1761540899_e9020f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ca14931.c: In function ‘main’:
./samples/SAFE/__tmp_4ca14931.c:146:5: error: expected expression at end of input
  146 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf.size, decompressed, sizeof
      |     ^~~~~~
./samples/SAFE/__tmp_4ca14931.c:146:5: error: expected declaration or statement at end of input
